<resources>
    <string name="app_name">Gomoku</string>
    <string name="restart">重新開始</string>
    <string name="win">Win!</string>
    <string name="player1">玩家1\n(黑子)</string>
    <string name="player2">玩家2\n(白子)</string>
    <string name="logout">登出</string>
    <string name="default_web_client_id">860839150557-820ekfjfum05t9lof2hqthaspn06t5so.apps.googleusercontent.com</string>
    <string name="google_login">Google帳號登入</string>
    <string name="fb_login">Facebook帳號登入</string>
    <string name="facebook_app_id">868959785248830</string>
    <string name="fb_login_protocol_scheme">fb868959785248830</string>
    <string name="facebook_client_token">ab1c4882024d1adf14b383651d08606a</string>
    <string name="login_failed">登入失敗</string>
    <string name="try_later">請稍後再試</string>
    <string name="confirm">確定</string>
    <string name="cancel_login">已取消登入</string>
    <string name="single_mode">單人模式</string>
    <string name="multiple_mode">連線模式</string>
    <string name="setting">設定</string>
    <string name="exit">離開</string>
    <string name="multiple_lobby">連線大廳</string>
    <string name="add_room">加入房間</string>
    <string name="create_room">創建房間</string>
    <string name="search_room">搜尋房間</string>
    <string name="rooms">Rooms</string>
    <string name="current_people">目前人數：</string>
    <string name="waiting">等待中</string>
    <string name="room_title">房間名：</string>
    <string name="offline_mode">離線模式</string>
    <string name="twenty_seconds">20 秒</string>
    <string name="enter_room_name">請輸入房間名稱</string>
    <string name="error">Error</string>
    <string name="already_has_same_room">已有相同房間</string>
    <string name="waiting_for_opponent">等待對手中...</string>
    <string name="back">返回上一頁</string>
    <string name="my_side_black">我方\n(黑子)</string>
    <string name="my_side_white">我方\n(白子)</string>
    <string name="opposite_side_white">敵方\n(白子)</string>
    <string name="opposite_side_black">敵方\n(黑子)</string>
    <string name="first_move">||| 先手 |||</string>
    <string name="second_move">||| 後手 |||</string>
    <string name="heading_to_game_board">前往棋盤頁面</string>
    <string name="game_start">開始對弈</string>
    <string name="give_up">放棄比賽</string>
    <string name="sure_to_quit">是否確定要退出遊戲?</string>
    <string name="cancel">取消\n</string>
    <string name="get_some_mistake">出現錯誤，請稍後重新再試。</string>
    <string name="second">秒</string>
    <string name="room_name">房間：</string>
    <string name="oppsite_player">對手：</string>
    <string name="gaming">對弈進行中</string>
    <string name="cannot_find_the_room">查無此房間</string>
    <string name="cannot_find_empty_room">目前尚無空房</string>
    <string name="no_rooms">尚無房間</string>
    <string name="desc_host">(房主)</string>
    <string name="no_opponent">對手已退出遊戲</string>
    <string name="switch_music">開啟背景音樂</string>
    <string name="switch_sound">開啟音效</string>
    <string name="you_win">You Win!</string>
    <string name="back_to_lobby">返回大廳</string>
    <string name="you_lose">You\nlost\n:(</string>
    <string name="failed_logout">登出失敗</string>
</resources>