<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_rooms"
    android:layout_margin="10dp"
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_room_title"
        android:text="@string/room_title"
        android:textColor="@color/white"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_room_status"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:text="@string/waiting"
        app:layout_constraintTop_toBottomOf="@+id/tv_room_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_current_people"
        android:textColor="@color/white"
        android:text="@string/current_people"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_room_status"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>