<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.joyce.chessgame.multiple_lobby.MultipleLobbyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:background="@drawable/bg_multiple_lobby"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".multiple_lobby.MultipleLobbyActivity">

        <View
            android:id="@+id/bg_white_frame"
            android:background="@color/white_75_percent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="160dp"/>

        <TextView
            android:text="@string/multiple_lobby"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="-10dp"
            android:layout_marginBottom="-12dp"
            app:layout_constraintLeft_toLeftOf="@+id/bg_white_frame"
            app:layout_constraintBottom_toTopOf="@+id/bg_white_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_add_room"
            android:text="@string/add_room"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@+id/bg_white_frame"
            app:layout_constraintLeft_toLeftOf="@+id/bg_white_frame"
            app:layout_constraintRight_toRightOf="@+id/bg_white_frame"
            app:layout_constraintBottom_toTopOf="@+id/tv_create_room"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/tv_create_room"
            android:text="@string/create_room"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_room"
            app:layout_constraintLeft_toLeftOf="@+id/tv_add_room"
            app:layout_constraintRight_toRightOf="@+id/tv_add_room"
            app:layout_constraintBottom_toTopOf="@+id/tv_search_room"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/tv_search_room"
            android:text="@string/search_room"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_create_room"
            app:layout_constraintLeft_toLeftOf="@+id/tv_add_room"
            app:layout_constraintRight_toRightOf="@+id/tv_add_room"
            app:layout_constraintBottom_toBottomOf="@+id/bg_white_frame"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_rooms"
            android:background="@color/white_75_percent"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:padding="10dp"
            tools:listitem="@layout/item_list_rooms"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/bg_white_frame"
            app:layout_constraintLeft_toLeftOf="@+id/bg_white_frame"
            app:layout_constraintRight_toRightOf="@+id/bg_white_frame"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="0dp"/>

        <TextView
            android:text="@string/rooms"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="-10dp"
            android:layout_marginBottom="-12dp"
            app:layout_constraintLeft_toLeftOf="@+id/rv_rooms"
            app:layout_constraintBottom_toTopOf="@+id/rv_rooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
