<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.joyce.chessgame.game_board.GameBoardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/bg_gameboard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".game_board.GameBoardActivity">

        <ImageView
            android:id="@+id/im_flag_1"
            android:src="@drawable/ic_flag"
            app:layout_constraintBottom_toTopOf="@+id/tv_player_1"
            app:layout_constraintLeft_toLeftOf="@+id/tv_player_1"
            app:layout_constraintRight_toRightOf="@+id/tv_player_1"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/tv_player_1"
            android:background="@drawable/bg_player_active"
            android:text="@string/player1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/game_board"
            app:layout_constraintRight_toLeftOf="@+id/tv_player_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/im_flag_2"
            android:src="@drawable/ic_flag"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tv_player_2"
            app:layout_constraintLeft_toLeftOf="@+id/tv_player_2"
            app:layout_constraintRight_toRightOf="@+id/tv_player_2"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:id="@+id/tv_player_2"
            android:background="@drawable/bg_player_inactive"
            android:text="@string/player2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="50dp"
            app:layout_constraintTop_toTopOf="@+id/tv_player_1"
            app:layout_constraintBottom_toBottomOf="@+id/tv_player_1"
            app:layout_constraintLeft_toRightOf="@+id/tv_player_1"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_timing_count_down"
            android:text="@string/twenty_seconds"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/brown_85664F"
            app:layout_constraintTop_toTopOf="@+id/tv_player_1"
            app:layout_constraintBottom_toBottomOf="@+id/tv_player_1"
            app:layout_constraintLeft_toRightOf="@+id/tv_player_1"
            app:layout_constraintRight_toLeftOf="@+id/tv_player_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.joyce.chessgame.game_board.GameBoard
            android:background="@color/game_board_background"
            android:id="@+id/game_board"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/restart"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_win"
            android:gravity="center"
            android:textSize="50sp"
            android:textStyle="bold"
            android:background="@color/black"
            android:textColor="@color/red"
            android:visibility="gone"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>