<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/bg_setting"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".setting.SettingActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cns_music"
            android:background="@drawable/bg_cover_google_login"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_music"
                android:text="@string/switch_music"
                android:padding="15dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Switch
                android:id="@+id/switch_music"
                android:layout_marginEnd="25dp"
                app:layout_constraintTop_toTopOf="@+id/tv_music"
                app:layout_constraintBottom_toBottomOf="@+id/tv_music"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cns_sound"
            android:background="@drawable/bg_cover_google_login"
            app:layout_constraintTop_toBottomOf="@+id/cns_music"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_sound"
                android:text="@string/switch_sound"
                android:padding="15dp"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Switch
                android:id="@+id/switch_sound"
                android:layout_marginEnd="25dp"
                app:layout_constraintTop_toTopOf="@+id/tv_sound"
                app:layout_constraintBottom_toBottomOf="@+id/tv_sound"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tv_logout"
            android:background="@drawable/bg_cover_google_login"
            android:layout_marginTop="25dp"
            android:text="@string/logout"
            android:paddingStart="35dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/cns_music"
            app:layout_constraintRight_toRightOf="@+id/cns_music"
            app:layout_constraintTop_toBottomOf="@+id/cns_sound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
