<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.joyce.chessgame.menu.MenuViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/bg_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".menu.MenuActivity">

        <ImageView
            android:id="@+id/menu_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="150dp"
            android:layout_marginStart="-60dp"
            android:src="@drawable/bg_menu_phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cns_offline_play"
            android:background="@drawable/bg_menu_btn"
            android:layout_marginTop="60dp"
            android:layout_marginStart="-10dp"
            app:layout_constraintLeft_toRightOf="@+id/menu_phone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/menu_phone"
            android:layout_marginEnd="15dp"
            android:layout_width="0dp"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/tv_offline_play"
                android:textSize="23sp"
                android:textStyle="bold"
                android:text="@string/offline_mode"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            
            <ImageView
                android:id="@+id/im_offline_play_checked"
                android:src="@drawable/ic_checked"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="35dp"
                android:layout_height="35dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cns_multiple_mode"
            android:background="@drawable/bg_menu_btn"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/cns_offline_play"
            app:layout_constraintLeft_toLeftOf="@+id/cns_offline_play"
            app:layout_constraintRight_toRightOf="@+id/cns_offline_play"
            android:layout_width="0dp"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/tv_multiple_mode"
                android:textSize="23sp"
                android:textStyle="bold"
                android:text="@string/multiple_mode"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/im_multiple_mode_checked"
                android:src="@drawable/ic_checked"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="35dp"
                android:layout_height="35dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cns_setting"
            android:background="@drawable/bg_menu_btn"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/cns_exit"
            app:layout_constraintLeft_toLeftOf="@+id/cns_offline_play"
            app:layout_constraintRight_toRightOf="@+id/cns_exit"
            android:layout_width="0dp"
            android:layout_height="55dp">

            <TextView
                android:id="@+id/tv_setting"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/setting"
                android:layout_marginStart="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/im_setting"
                android:src="@drawable/ic_settings"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="35dp"
                android:layout_height="35dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cns_exit"
            android:background="@drawable/bg_menu_btn"
            android:layout_marginBottom="60dp"
            android:layout_marginEnd="70dp"
            app:layout_constraintLeft_toLeftOf="@+id/cns_offline_play"
            app:layout_constraintRight_toRightOf="@+id/cns_offline_play"
            app:layout_constraintBottom_toBottomOf="@+id/menu_phone"
            android:layout_width="0dp"
            android:layout_height="55dp">

            <TextView
                android:id="@+id/tv_exit"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/exit"
                android:layout_marginStart="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/im_exit"
                android:src="@drawable/ic_exit"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="35dp"
                android:layout_height="35dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
